feat(api v2): updated endpoints to prefix with v2, updated documentation, removed dead code
